# Gizmo_Model

./: .gitignore  README.md  gizmo_start.py  my-catalog.yaml  starte_server.bat  test.json  tools_config.json
brain_core/: CMakeLists.txt  Dockerfile  docker-compose.yml  readme.md
brain_core/src/: hormones.cpp  hormones.h  io_logger.cpp  io_logger.h  main.cpp  net.cpp  net.h  neurons.cpp  neurons.h
gizmo_coach/: CMakeLists.txt  Starte_Backend.bat  readme.md
gizmo_coach/src/: brain_io.cpp  brain_io.h  coach_logic.cpp  coach_logic.h  hormons_reader.cpp  hormons_reader.h  livekit_stub.cpp  livekit_stub.h  log_tail.h  main.cpp  pattern_gen.cpp  pattern_gen.h
gizmo_server/: gizmo_server.py  requirements.txt  setup.md
gizmo_server/.gizmo/: mcp-config.json
